Added Denver trip page and navigation button

--- a/index.html
+++ b/index.html
@@ -1,105 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Wise Sphere</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #fdf6e3;
-            color: #333;
-        }
-        header {
-            background-color: #1e3d59;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        header img.logo {
-            width: 60px;
-            height: 60px;
-            vertical-align: middle;
-        }
-        header h1 {
-            display: inline;
-            margin-left: 10px;
-            font-size: 2em;
-            vertical-align: middle;
-        }
-        .hero {
-            text-align: center;
-            margin: 20px;
-        }
-        .hero img {
-            max-width: 90%;
-            height: auto;
-            border-radius: 10px;
-        }
-        .description {
-            max-width: 800px;
-            margin: 20px auto;
-            font-size: 1.1em;
-            line-height: 1.6;
-            text-align: center;
-        }
-        article {
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
-        }
-        article h2 {
-            color: #1e3d59;
-        }
-        article p {
-            line-height: 1.6;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #1e3d59;
-            color: white;
-            margin-top: 40px;
-        }
-    </style>
-</head>
-<body>
+<article>
+    <h2>Dallas to Hot Springs Road Trip</h2>
+    <p>
+        Our recent road trip from Dallas, Texas to Hot Springs, Arkansas was filled with stunning landscapes...
+    </p>
+    <p>
+        Whether you’re looking for a weekend getaway or an extended adventure, this route offers the perfect mix...
+    </p>
 
-    <!-- Header with logo and title -->
-    <header>
-        <img src="logo.png" alt="WiseSphere Logo" class="logo">
-        <h1>The Wise Sphere</h1>
-    </header>
-
-    <!-- Hero image -->
-    <div class="hero">
-        <img src="wisesphere.jpg" alt="WiseSphere Main Image">
+    <!-- Button to Denver page -->
+    <div style="text-align:center; margin-top:20px;">
+        <a href="denver.html" style="text-decoration:none; background-color:#1e3d59; color:white; padding:10px 20px; border-radius:5px;">Read About Denver Trip</a>
     </div>
-
-    <!-- Small description -->
-    <div class="description">
-        <p>Welcome to The Wise Sphere – your travel companion for discovering the hidden gems of the world. Explore tips, guides, and stories from unforgettable road trips and adventures.</p>
-    </div>
-
-    <!-- Blog post -->
-    <article>
-        <h2>Dallas to Hot Springs Road Trip</h2>
-        <p>
-            Our recent road trip from Dallas, Texas to Hot Springs, Arkansas was filled with stunning landscapes, charming towns, and unforgettable moments. We explored the natural thermal springs, hiked scenic trails, and savored local cuisine along the way.
-        </p>
-        <p>
-            Whether you’re looking for a weekend getaway or an extended adventure, this route offers the perfect mix of relaxation and exploration. Make sure to pack your camera – the vistas are absolutely breathtaking!
-        </p>
-    </article>
-
-    <footer>
-        &copy; 2025 The Wise Sphere. All Rights Reserved.
-    </footer>
-
-</body>
-</html>
+</article>
