--- a/index.html
+++ b/index.html
@@ -1,14 +1,53 @@
-<article>
-    <h2>Dallas to Hot Springs Road Trip</h2>
-    <p>
-        Our recent road trip from Dallas, Texas to Hot Springs, Arkansas was filled with stunning landscapes...
-    </p>
-    <p>
-        Whether you’re looking for a weekend getaway or an extended adventure, this route offers the perfect mix...
-    </p>
-
-    <!-- Button to Denver page -->
-    <div style="text-align:center; margin-top:20px;">
-        <a href="denver.html" style="text-decoration:none; background-color:#1e3d59; color:white; padding:10px 20px; border-radius:5px;">Read About Denver Trip</a>
-    </div>
-</article>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>The Wise Sphere</title>
+<link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+<header>
+<div class="container">
+<img src="assets/images/logo.png" alt="WiseSphere Logo" class="logo">
+<h1>The Wise Sphere</h1>
+<nav>
+<a href="index.html">Home</a>
+<a href="about.html">About</a>
+<a href="destinations.html">Destinations</a>
+</nav>
+</div>
+</header>
+<section class="hero">
+<img src="assets/images/hot-springs.jpg" alt="Hot Springs Trip">
+<div class="hero-text">
+<h2>Dallas to Hot Springs Road Trip</h2>
+<p>Explore the natural beauty, hidden gems, and unforgettable adventures on this scenic journey.</p>
+<a href="blog/dallas-hot-springs.html" class="btn">Read More</a>
+</div>
+</section>
+<section class="featured-destinations">
+<h2>Other Destinations</h2>
+<div class="cards">
+<div class="card">
+<img src="assets/images/denver.jpg" alt="Denver Trip">
+<h3>Denver Road Trip</h3>
+<a href="blog/denver-road-trip.html" class="btn">Read More</a>
+</div>
+<div class="card">
+<img src="assets/images/nashville.jpg" alt="Nashville Trip">
+<h3>Nashville Adventure</h3>
+<a href="blog/nashville-trip.html" class="btn">Read More</a>
+</div>
+<div class="card">
+<img src="assets/images/yosemite.jpg" alt="Yosemite Trip">
+<h3>Yosemite Exploration</h3>
+<a href="blog/yosemite-trip.html" class="btn">Read More</a>
+</div>
+</div>
+</section>
+<footer>
+&copy; 2025 The Wise Sphere. All rights reserved.
+</footer>
+</body>
+</html>
