--- a/admin/index.html
+++ b/admin/index.html
@@ -2,22 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>The Wise Sphere | Admin</title>
-    <script src="https://unpkg.com/netlify-identity-widget@1.9.1/build/netlify-identity-widget.js"></script>
+    <title>Content Manager</title>
   </head>
   <body>
-    <script>
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", user => {
-          if (!user) {
-            window.netlifyIdentity.on("login", () => {
-              document.location.href = "/admin/";
-            });
-          }
-        });
-      }
-    </script>
-
-    <script src="https://unpkg.com/netlify-cms-app@2.15.83/dist/netlify-cms.js"></script>
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </body>
 </html>
