--- a/index.html
+++ b/index.html
@@ -1,171 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>The Wise Sphere | Travel Blog</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="The Wise Sphere is a travel blog sharing road trips, destinations, and experiences from around the world." />
-
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: #fafafa;
-      color: #333;
-    }
-
-    header {
-      background: #1f3c88;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .hero {
-      background: url("assets/uploads/hero.jpg") center/cover no-repeat;
-      height: 70vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      color: white;
-    }
-
-    .hero h1 {
-      font-size: 3em;
-      background: rgba(0,0,0,0.5);
-      padding: 20px;
-      border-radius: 8px;
-    }
-
-    .container {
-      max-width: 1100px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-
-    .intro {
-      text-align: center;
-      margin-bottom: 50px;
-    }
-
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-    }
-
-    .card {
-      background: white;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-
-    .card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-
-    .card-content {
-      padding: 20px;
-    }
-
-    .card-content h3 {
-      margin-top: 0;
-    }
-
-    .card-content a {
-      display: inline-block;
-      margin-top: 10px;
-      text-decoration: none;
-      color: #1f3c88;
-      font-weight: bold;
-    }
-
-    footer {
-      background: #1f3c88;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      margin-top: 50px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Traffic Impact Decision Toolkit</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
+<body class="bg-gray-50 text-gray-900 font-sans">
 
-<body>
-
-  <header>
-    <h1>The Wise Sphere</h1>
-    <nav>
-      <a href="/">Home</a>
-      <a href="#trips">Trips</a>
-      <a href="#about">About</a>
-    </nav>
+  <!-- Header -->
+  <header class="bg-white shadow">
+    <div class="max-w-6xl mx-auto px-4 py-6 flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-gray-900">Traffic Impact Decision Toolkit</h1>
+      <nav class="space-x-6">
+        <a href="#about" class="hover:text-blue-600">About</a>
+        <a href="#features" class="hover:text-blue-600">Features</a>
+        <a href="#pricing" class="hover:text-blue-600">Pricing</a>
+        <a href="#contact" class="hover:text-blue-600">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <section class="hero">
-    <h1>Travel Smart. Travel Deep.</h1>
+  <!-- Hero Section -->
+  <section class="bg-blue-50 py-20">
+    <div class="max-w-6xl mx-auto px-4 text-center">
+      <h2 class="text-4xl font-extrabold mb-4">Defensible Traffic Impact Decisions for Your Projects</h2>
+      <p class="text-lg mb-8 text-gray-700">Practical frameworks used by working transportation professionals to reduce rework, manage risk, and streamline approvals.</p>
+      <a href="#pricing" class="bg-blue-600 text-white px-8 py-3 rounded-lg font-semibold hover:bg-blue-700">Get the Toolkit</a>
+    </div>
   </section>
 
-  <div class="container">
+  <!-- About Section -->
+  <section id="about" class="py-20">
+    <div class="max-w-4xl mx-auto px-4 text-center">
+      <h3 class="text-3xl font-bold mb-4">About the Toolkit</h3>
+      <p class="text-gray-700 text-lg mb-6">The Traffic Impact Decision Toolkit is designed for transportation engineers, urban planners, and consultants who need to make **fast, defensible, and high-confidence decisions** on development projects. Avoid over-scoping studies, reduce reviewer challenges, and deliver clear recommendations every time.</p>
+    </div>
+  </section>
 
-    <section class="intro" id="about">
-      <h2>Welcome to The Wise Sphere</h2>
-      <p>
-        The Wise Sphere is a travel blog focused on meaningful journeys, road trips,
-        hidden destinations, and real experiences. From weekend getaways to long
-        adventures, this is where stories meet exploration.
-      </p>
-    </section>
-
-    <section id="trips">
-      <h2>Featured Trips</h2>
-
-      <div class="cards">
-
-        <div class="card">
-          <img src="assets/uploads/hot-springs.jpg" alt="Dallas to Hot Springs Road Trip">
-          <div class="card-content">
-            <h3>Dallas to Hot Springs Road Trip</h3>
-            <p>A scenic journey filled with nature, relaxation, and small-town charm.</p>
-            <a href="/blog/dallas-hot-springs.html">Read More →</a>
-          </div>
+  <!-- Features Section -->
+  <section id="features" class="bg-white py-20">
+    <div class="max-w-6xl mx-auto px-4">
+      <h3 class="text-3xl font-bold text-center mb-12">Toolkit Features</h3>
+      <div class="grid md:grid-cols-3 gap-8 text-center">
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">Scope Decision Framework</h4>
+          <p class="text-gray-700">Determine when a Traffic Impact Analysis is required and how to justify the appropriate scope for any project.</p>
         </div>
-
-        <div class="card">
-          <img src="assets/uploads/denver.jpg" alt="Denver Road Trip">
-          <div class="card-content">
-            <h3>Denver Adventure</h3>
-            <p>Mountains, city life, and unforgettable landscapes.</p>
-            <a href="/blog/denver-road-trip.html">Read More →</a>
-          </div>
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">Trip Generation & Assumptions</h4>
+          <p class="text-gray-700">Templates and guidance for realistic trip generation, adjusting assumptions, and sensitivity testing for defensible results.</p>
         </div>
-
-        <div class="card">
-          <img src="assets/uploads/yosemite.jpg" alt="Yosemite Trip">
-          <div class="card-content">
-            <h3>Yosemite Exploration</h3>
-            <p>National parks, hiking trails, and breathtaking views.</p>
-            <a href="/blog/yosemite-trip.html">Read More →</a>
-          </div>
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">LOS & Mitigation Decisions</h4>
+          <p class="text-gray-700">Frameworks to balance Level of Service (LOS), safety, reliability, and cost-effectiveness in mitigation strategies.</p>
         </div>
-
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">Executive Summary Templates</h4>
+          <p class="text-gray-700">Client-ready summary templates and communication tools to justify decisions and respond to reviewers efficiently.</p>
+        </div>
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">Decision Trees & Checklists</h4>
+          <p class="text-gray-700">Step-by-step decision trees and checklists to systematically evaluate every traffic and development scenario.</p>
+        </div>
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">Excel & Word Tools</h4>
+          <p class="text-gray-700">Ready-to-use spreadsheets and report templates to streamline your workflow and save hours on each project.</p>
+        </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-  </div>
+  <!-- Pricing Section -->
+  <section id="pricing" class="bg-blue-50 py-20">
+    <div class="max-w-6xl mx-auto px-4 text-center">
+      <h3 class="text-3xl font-bold mb-8">Pricing</h3>
+      <div class="grid md:grid-cols-3 gap-8">
+        <div class="bg-white p-8 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-4">Individual License</h4>
+          <p class="text-4xl font-bold mb-4">$149</p>
+          <p class="text-gray-700 mb-6">Perfect for solo engineers or consultants. Includes full PDF playbook, decision templates, and checklists.</p>
+          <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700">Buy Now</a>
+        </div>
+        <div class="bg-white p-8 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-4">Professional License</h4>
+          <p class="text-4xl font-bold mb-4">$499</p>
+          <p class="text-gray-700 mb-6">Ideal for small firms or teams. Includes all tools, spreadsheets, templates, and multiple user licenses.</p>
+          <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700">Buy Now</a>
+        </div>
+        <div class="bg-white p-8 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-4">Firm License</h4>
+          <p class="text-4xl font-bold mb-4">$1,500</p>
+          <p class="text-gray-700 mb-6">Full organizational access, team training, and priority support. Ideal for mid-size firms or agencies.</p>
+          <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700">Contact Us</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <footer>
-    <p>© 2025 The Wise Sphere. All rights reserved.</p>
+  <!-- Contact Section -->
+  <section id="contact" class="py-20">
+    <div class="max-w-4xl mx-auto px-4 text-center">
+      <h3 class="text-3xl font-bold mb-4">Contact Us</h3>
+      <p class="text-gray-700 mb-6">Have questions or want a firm license? Reach out and we’ll get back to you promptly.</p>
+      <form class="space-y-4">
+        <input type="text" placeholder="Your Name" class="w-full p-3 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <input type="email" placeholder="Your Email" class="w-full p-3 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <textarea placeholder="Your Message" class="w-full p-3 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600 h-32"></textarea>
+        <button type="submit" class="bg-blue-600 text-white px-8 py-3 rounded-lg font-semibold hover:bg-blue-700">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-white py-6 mt-20 shadow-inner">
+    <div class="max-w-6xl mx-auto px-4 text-center text-gray-600">
+      &copy; 2026 Traffic Impact Decision Toolkit. All rights reserved.
+    </div>
   </footer>
 
 </body>
