--- a/admin/index.html
+++ b/admin/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <h1>Case Study 1</h1>
-  <p>This is where you write your case study content.</p>
+  <p>This is where you write your case study content.
+Hello my name is HAHA</p>
 
   <!-- Buy Tool for this Case Study -->
   <h2>Buy the Tool</h2>
