--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Productivity Website</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Add your CSS stylesheet here -->
+    <link rel="stylesheet" href="css/styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
 
 <!-- Header -->
 <header>
     <div class="logo">
-        <h1>Your Brand</h1> <!-- You can replace this with your actual logo -->
+        <h1>Your Brand</h1> <!-- Replace with your logo -->
     </div>
     <nav>
         <ul>
